Разберабсь с контекстом данных

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PhoneBookContext": "Server=(localdb)\\mssqllocaldb;Database=PhoneBookContext-32fa3dd7-34a8-4836-9873-44b8e0dbaf6b;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
