Перед началом работы с JWT

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PhoneBookContext": "Server=(localdb)\\mssqllocaldb;Database=PhoneBookContext-32fa3dd7-34a8-4836-9873-44b8e0dbaf6b;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "PhoneBookContext": "Data Source=217.28.223.127,17160;User ID=user_acda0;Password=r+6A$2Kt4Jz%;Database=db_89ff4;Connect Timeout=30;Trusted_Connection=False;MultipleActiveResultSets=true; Encrypt=False"
   }
 }
