Настройка конвейера запросов

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings": {
+    "Token": "My top secret Key №1"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
