--- a/appsettings.json
+++ b/appsettings.json
@@ -11,6 +11,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PhoneBookContext":"Data Source=217.28.223.127,17160;User ID=user_acda0;Password=r+6A$2Kt4Jz%;Database=db_89ff4;Connect Timeout=30;Trusted_Connection=False;MultipleActiveResultSets=true; Encrypt=False"
+    "PhoneBookContext": "Data Source=217.28.223.127,17160;User ID=user_acda0;Password=r+6A$2Kt4Jz%;Database=db_89ff4;Connect Timeout=30;Trusted_Connection=False;MultipleActiveResultSets=true; Encrypt=False",
+    "UserApp": "Server=(localdb)\\mssqllocaldb;Database=userApp;Trusted_Connection=True"
   }
 }
