Изменил настройки jwt токена. Добавил  AuthOptions и настроил схему в program

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "AppSettings": {
-    "Token": "My top secret Key №1"
-  },
+  //"AppSettings": {
+  //  "Token": "My top secret Key №1"
+  //},
 
   "Logging": {
     "LogLevel": {
@@ -12,7 +12,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PhoneBookContext": "Data Source=217.28.223.127,17160;User ID=user_acda0;Password=r+6A$2Kt4Jz%;Database=db_89ff4;Connect Timeout=30;Trusted_Connection=False;MultipleActiveResultSets=true; Encrypt=False",
-    "UserApp": "Data Source=userApp.db"
+    //"UserApp": "Data Source=userApp.db"
     //"Server=(localdb)\\mssqllocaldb;Database=userApp;Trusted_Connection=True"
   }
 }
