добавил копирование базы user

--- a/ApiPhoneBook.csproj
+++ b/ApiPhoneBook.csproj
@@ -41,4 +41,10 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="userApp.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
